--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-<!DOCTYPE html>
-<html lang="id">
+<html>
 <head>
-  <meta charset="UTF-8" />
   <title>Beranda - UMKM Rasa Lokal</title>
   <style>
     * {
@@ -16,28 +14,28 @@
       color: #333;
     }
 
-    .header-bar {
+  .header-bar {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 20px 40px;
       background-color: white;
       flex-wrap: wrap;
-    }
+  }
 
-    .logo h1 {
+  .logo h1 {
       margin: 0;
       font-size: 2em;
       color: #009688;
-    }
+  }
 
-    .logo p {
+  .logo p {
       font-size: 1em;
       color: #666;
       margin-top: 4px;
-    }
+  }
 
-    .navbar a {
+  .navbar a {
       text-decoration: none;
       background-color: #009688;
       color: #fff;
@@ -46,27 +44,27 @@
       border-radius: 6px;
       font-weight: bold;
       transition: background-color 0.3s ease;
-    }
+  }
 
-    .navbar a:hover {
+  .navbar a:hover {
       background-color: #00796b;
+  }
+
+  @media (max-width: 700px) {
+    .header-bar {
+      flex-direction: column;
+      align-items: flex-start;
     }
 
-    @media (max-width: 700px) {
-      .header-bar {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      .navbar {
-        margin-top: 15px;
-      }
-
-      .navbar a {
-        display: inline-block;
-        margin: 5px 5px 0 0;
-      }
+    .navbar {
+      margin-top: 15px;
     }
+
+    .navbar a {
+      display: inline-block;
+      margin: 5px 5px 0 0;
+    }
+  }
 
     h2 {
       color: #2c3e50;
@@ -90,6 +88,7 @@
       color: #333;
     }
 
+
     p, ul, blockquote {
       margin-top: 10px;
       line-height: 1.6;
@@ -108,7 +107,6 @@
       text-align: center;
       border-radius: 10px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-      transition: box-shadow 0.3s ease;
     }
 
     .product-item img {
@@ -163,47 +161,72 @@
       font-size: 0.9em;
       color: #ffffff;
       border-top: 1px solid #eee;
+
     }
 
-    @media (max-width: 768px) {
-      /* Carousel style for mobile */
-
-      .product-grid {
-        position: relative;
-        display: block;
-        height: auto;
-        padding-bottom: 40px; /* ruang bawah untuk teks */
-        overflow: visible;
-        max-width: 320px;
-        margin: 20px auto;
-      }
-
-      .product-item {
-        position: absolute;
-        top: 0;
-        left: 50%;
-        width: 90%;
-        transform: translateX(-50%);
-        opacity: 0;
-        pointer-events: none;
-        transition: opacity 0.5s ease;
-        box-shadow: none;
-        background-color: transparent;
-        padding-bottom: 50px;
-        min-height: 280px;
-        border-radius: 10px;
-      }
-
-      .product-item.active {
-        opacity: 1;
-        pointer-events: auto;
-        position: relative;
-        box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-        background-color: #fafafa;
-        padding-bottom: 20px;
-        min-height: auto;
+    @media (max-width: 600px) {
+      nav {
+        font-size: 1em;
       }
     }
+
+  @media (max-width: 480px) {
+  body {
+    font-size: 14px;
+  }
+
+  section, main {
+    padding: 20px 15px;
+    margin: 5px 10px;
+  }
+
+  h1 {
+    font-size: 1.5em;
+  }
+
+  h2 {
+    font-size: 1.2em;
+  }
+
+  .header-bar {
+    padding: 15px 20px;
+  }
+
+  .logo h1 {
+    font-size: 1.5em;
+  }
+
+  .logo p {
+    font-size: 0.9em;
+  }
+
+  .navbar a {
+    padding: 8px 12px;
+    font-size: 0.9em;
+    margin-left: 5px;
+    display: block;
+    margin-bottom: 8px;
+    width: 100%;
+    box-sizing: border-box;
+    border-radius: 6px;
+  }
+
+  .product-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .product-item img {
+    max-height: 150px;
+  }
+
+  button {
+    width: 100%;
+    padding: 12px 0;
+    font-size: 1em;
+  }
+}
+
+    
   </style>
 </head>
 <body>
@@ -221,6 +244,7 @@
   </nav>
 </header>
 
+
 <!-- SECTION 1: TENTANG -->
 <section>
   <h2>Tentang UMKM Kami</h2>
@@ -234,23 +258,23 @@
 <main>
   <h2>Produk Unggulan</h2>
   <div class="product-grid">
-    <div class="product-item active">
-      <img src="keripik.jpg" alt="Keripik Singkong" />
+    <div class="product-item">
+      <img src="keripik.jpg" alt="Keripik Singkong">
       <strong>Keripik Singkong</strong>
       <p>Rp15.000</p>
     </div>
     <div class="product-item">
-      <img src="dodol.jpg" alt="Dodol Mangga" />
+      <img src="dodol.jpg" alt="Dodol Mangga">
       <strong>Dodol Mangga</strong>
       <p>Rp20.000</p>
     </div>
     <div class="product-item">
-      <img src="kopi.jpg" alt="Kopi Bubuk" />
+      <img src="kopi.jpg" alt="Kopi Bubuk">
       <strong>Kopi Bubuk</strong>
       <p>Rp25.000</p>
     </div>
   </div>
-  <br />
+  <br>
   <p style="text-align: center;">
     <a href="produk.html"><button>Lihat Semua Produk</button></a>
   </p>
@@ -290,38 +314,6 @@
 <footer>
   <p>© 2025 UMKM Rasa Lokal. Seluruh hak cipta dilindungi.</p>
 </footer>
-
-<script>
-  // Carousel untuk mobile (max-width: 768px)
-  function initCarousel() {
-    const productItems = document.querySelectorAll('.product-item');
-    let currentIndex = 0;
-    const total = productItems.length;
-
-    function showSlide(index) {
-      productItems.forEach((item, i) => {
-        item.classList.toggle('active', i === index);
-      });
-    }
-
-    function nextSlide() {
-      currentIndex = (currentIndex + 1) % total;
-      showSlide(currentIndex);
-    }
-
-    showSlide(currentIndex);
-    setInterval(() => {
-      if(window.innerWidth <= 768) {
-        nextSlide();
-      }
-    }, 3000);
-  }
-
-  window.addEventListener('load', initCarousel);
-  window.addEventListener('resize', () => {
-    // Reset carousel when resize if needed
-  });
-</script>
 
 </body>
 </html>
