--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="id">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Beranda - UMKM Rasa Lokal</title>
   <style>
     * {
@@ -14,57 +17,46 @@
       color: #333;
     }
 
-  .header-bar {
+    .header-bar {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 20px 40px;
       background-color: white;
       flex-wrap: wrap;
-  }
+    }
 
-  .logo h1 {
+    .logo h1 {
       margin: 0;
       font-size: 2em;
       color: #009688;
-  }
+    }
 
-  .logo p {
+    .logo p {
       font-size: 1em;
       color: #666;
       margin-top: 4px;
-  }
+    }
 
-  .navbar a {
+    .navbar {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+
+    .navbar a {
       text-decoration: none;
       background-color: #009688;
       color: #fff;
       padding: 10px 18px;
-      margin-left: 10px;
       border-radius: 6px;
       font-weight: bold;
       transition: background-color 0.3s ease;
-  }
+    }
 
-  .navbar a:hover {
+    .navbar a:hover {
       background-color: #00796b;
-  }
-
-  @media (max-width: 700px) {
-    .header-bar {
-      flex-direction: column;
-      align-items: flex-start;
     }
-
-    .navbar {
-      margin-top: 15px;
-    }
-
-    .navbar a {
-      display: inline-block;
-      margin: 5px 5px 0 0;
-    }
-  }
 
     h2 {
       color: #2c3e50;
@@ -87,7 +79,6 @@
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
       color: #333;
     }
-
 
     p, ul, blockquote {
       margin-top: 10px;
@@ -161,88 +152,62 @@
       font-size: 0.9em;
       color: #ffffff;
       border-top: 1px solid #eee;
-
     }
 
-    @media (max-width: 600px) {
-      nav {
-        font-size: 1em;
+    /* ======== RESPONSIVE DESIGN ======== */
+    @media (max-width: 700px) {
+      .header-bar {
+        flex-direction: column;
+        align-items: center;
+        padding: 25px 20px;
+      }
+
+      .logo h1 {
+        font-size: 2.2em;
+        text-align: center;
+      }
+
+      .logo p {
+        font-size: 1.2em;
+        text-align: center;
+        margin-bottom: 15px;
+      }
+
+      .navbar {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+      }
+
+      .navbar a {
+        font-size: 1.3em;
+        padding: 14px 20px;
+        width: 90%;
+        max-width: 350px;
+        text-align: center;
+        margin-bottom: 10px;
+        border-radius: 10px;
+      }
+
+      section, main {
+        padding: 20px;
+        margin: 5px 15px;
+      }
+
+      .product-grid {
+        grid-template-columns: 1fr;
+      }
+
+      .product-item img {
+        max-height: 160px;
+      }
+
+      button {
+        width: 100%;
+        font-size: 1.1em;
+        padding: 14px 0;
       }
     }
-
-  @media (max-width: 480px) {
-  body {
-    font-size: 14px;
-  }
-
-  section, main {
-    padding: 20px 15px;
-    margin: 5px 10px;
-  }
-
-  h1 {
-    font-size: 1.5em;
-  }
-
-  h2 {
-    font-size: 1.2em;
-  }
-
-  @media (max-width: 480px) {
-  .header-bar {
-    padding: 25px 20px;     /* tambah padding atas bawah */
-    flex-direction: column;
-    align-items: center;
-    min-height: 100px;      /* beri tinggi minimal supaya header cukup besar */
-  }
-
-  .logo h1 {
-    font-size: 2em;         /* besar banget */
-    margin-bottom: 8px;
-    text-align: center;
-  }
-
-  .logo p {
-    font-size: 1.1em;
-    text-align: center;
-    margin-bottom: 15px;
-  }
-
-  .navbar {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .navbar a {
-    padding: 16px 20px;
-    font-size: 1.3em;
-    margin: 6px 0;
-    width: 90%;
-    max-width: 350px;
-    border-radius: 10px;
-    text-align: center;
-  }
-}
-
-
-  .product-grid {
-    grid-template-columns: 1fr;
-  }
-
-  .product-item img {
-    max-height: 150px;
-  }
-
-  button {
-    width: 100%;
-    padding: 12px 0;
-    font-size: 1em;
-  }
-}
-
-    
   </style>
 </head>
 <body>
@@ -259,7 +224,6 @@
     <a href="kontak.html">Kontak</a>
   </nav>
 </header>
-
 
 <!-- SECTION 1: TENTANG -->
 <section>
