--- a/produk.html
+++ b/produk.html
@@ -1,7 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="id">
 <head>
+  <meta charset="UTF-8">
   <title>Beranda - UMKM Rasa Lokal</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       font-family: 'Segoe UI', sans-serif;
       background-color: #f8f8f8;
@@ -10,57 +16,62 @@
       padding: 0;
     }
 
-  .header-bar {
+    .header-bar {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 20px 40px;
       background-color: white;
       flex-wrap: wrap;
-  }
+    }
 
-  .logo h1 {
+    .logo h1 {
       margin: 0;
       font-size: 2em;
       color: #009688;
-  }
+    }
 
-  .logo p {
+    .logo p {
       font-size: 1em;
       color: #666;
       margin-top: 4px;
-  }
+    }
 
-  .navbar a {
+    .navbar {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 10px;
+    }
+
+    .navbar a {
       text-decoration: none;
       background-color: #009688;
       color: #fff;
       padding: 10px 18px;
-      margin-left: 10px;
       border-radius: 6px;
       font-weight: bold;
       transition: background-color 0.3s ease;
-  }
+    }
 
-  .navbar a:hover {
+    .navbar a:hover {
       background-color: #00796b;
-  }
-
-  @media (max-width: 700px) {
-    .header-bar {
-      flex-direction: column;
-      align-items: flex-start;
     }
 
-    .navbar {
-      margin-top: 15px;
-    }
+    @media (max-width: 700px) {
+      .header-bar {
+        flex-direction: column;
+        align-items: flex-start;
+      }
 
-    .navbar a {
-      display: inline-block;
-      margin: 5px 5px 0 0;
+      .navbar {
+        justify-content: flex-start;
+      }
+
+      .navbar a {
+        display: inline-block;
+      }
     }
-  }
 
     section {
       padding: 20px;
@@ -77,55 +88,29 @@
       padding-bottom: 5px;
     }
 
-    table {
-      width: 100%;
-      text-align: center;
-      margin-top: 15px;
+    .product-grid {
+      display: flex;
+      gap: 20px;
+      overflow-x: auto;
+      padding: 10px 0;
     }
 
-    td {
-      padding: 15px;
-      vertical-align: top;
-    }
-
-    img {
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-
-    button {
-      padding: 10px 20px;
-      background-color: #009688;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #219150;
-    }
-
-    blockquote {
-      background-color: #f0f0f0;
-      font-style: italic;
-      padding: 15px;
-      border-left: 5px solid #3498db;
-      margin: 15px 0;
-      border-radius: 5px;
-    }
-
-    ul {
-      padding-left: 20px;
-      line-height: 1.6;
-    }
-
-    article {
+    .product-item {
+      min-width: 220px;
       background-color: #fafafa;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
       padding: 15px;
-      border-left: 4px solid #e67e22;
-      margin-top: 10px;
-      border-radius: 5px;
+      flex-shrink: 0;
+      text-align: center;
+    }
+
+    .product-item img {
+      width: 100px;
+      height: auto;
+      border-radius: 10px;
+      margin-bottom: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
 
     footer {
@@ -136,26 +121,11 @@
       font-size: 0.9em;
       color: #ffffff;
       border-top: 1px solid #eee;
-
-    }
-
-    @media (max-width: 600px) {
-      table {
-        display: block;
-      }
-
-      td {
-        display: block;
-        width: 100%;
-      }
-
-      nav p {
-        font-size: 1em;
-      }
     }
   </style>
 </head>
 <body>
+
 <header class="header-bar">
   <div class="logo">
     <h1>UMKM Rasa Lokal</h1>
@@ -168,64 +138,51 @@
   </nav>
 </header>
 
-<!--TABEL PRODUK-->
-<section> 
-  <h2>Daftar Produk</h2> 
-  <table border="1" width="100%" cellpadding="10">
-    <tr>
-      <th>Gambar</th> 
-      <th>Nama Produk</th> 
-      <th>Deskripsi</th> 
-      <th>Harga</th> 
-      <th>Ketersediaan</th> 
-    </tr> 
-    <tr> 
-      <td><center><img src="keripik.jpg" alt="Keripik Singkong" width="100"></center></td> 
-      <td>Keripik Singkong Pedas</td> 
-      <td>Renyah dan gurih dengan bumbu khas Nusantara</td> 
-      <td>Rp15.000</td> 
-      <td>Tersedia</td> 
-    </tr> 
-    <tr> 
-      <td><center><img src="dodol.jpg" alt="Dodol Mangga" width="100"></center></td> 
-      <td>Dodol Mangga Asli</td> 
-      <td>Manis legit dari buah mangga segar tanpa pengawet</td> 
-      <td>Rp20.000</td> 
-      <td>Stok Terbatas</td> 
-    </tr>
-    <tr> 
-      <td><center><img src="kopi.jpg" alt="Kopi Bubuk Robusta" width="100"></center></td> 
-      <td>Kopi Bubuk Robusta</td> 
-      <td>Biji kopi pilihan dari pegunungan, ditumbuk manual</td> 
-      <td>Rp25.000</td> 
-      <td>Tersedia</td> 
-    </tr>
-    <tr> 
-      <td><center><img src="abon.jpg" alt="Abon Sapi Gurih" width="100"></center></td> 
-      <td>Abon Sapi Gurih</td> 
-      <td>Abon daging sapi premium, cocok untuk bekal & nasi hangat</td> 
-      <td>Rp30.000</td> 
-      <td>Tersedia</td> 
-    </tr>
-    <tr> 
-      <td><center><img src="kacang.jpg" alt="Kacang Bawang Renyah" width="100"></center></td> 
-      <td>Kacang Bawang Renyah</td> 
-      <td>Kacang goreng dengan aroma bawang khas dan gurih</td> 
-      <td>Rp18.000</td> 
-      <td>Pre-Order</td> 
-    </tr>
-    <tr> 
-      <td><center><img src="serundeng.jpg" alt="Serundeng Kelapa" width="100"></center></td> 
-      <td>Serundeng Kelapa</td> 
-      <td>Kelapa parut sangrai, cocok sebagai lauk pelengkap</td> 
-      <td>Rp10.000</td> 
-      <td>Tersedia</td> 
-    </tr>
-  </table> 
-</section> 
-<!-- FOOTER -->
+<section>
+  <h2>Daftar Produk</h2>
+  <div class="product-grid">
+    <div class="product-item">
+      <img src="keripik.jpg" alt="Keripik Singkong">
+      <h4>Keripik Singkong Pedas</h4>
+      <p>Renyah dan gurih dengan bumbu khas Nusantara</p>
+      <strong>Rp15.000</strong><br><small>Tersedia</small>
+    </div>
+    <div class="product-item">
+      <img src="dodol.jpg" alt="Dodol Mangga">
+      <h4>Dodol Mangga Asli</h4>
+      <p>Manis legit dari buah mangga segar tanpa pengawet</p>
+      <strong>Rp20.000</strong><br><small>Stok Terbatas</small>
+    </div>
+    <div class="product-item">
+      <img src="kopi.jpg" alt="Kopi Robusta">
+      <h4>Kopi Bubuk Robusta</h4>
+      <p>Biji kopi pilihan dari pegunungan, ditumbuk manual</p>
+      <strong>Rp25.000</strong><br><small>Tersedia</small>
+    </div>
+    <div class="product-item">
+      <img src="abon.jpg" alt="Abon Sapi">
+      <h4>Abon Sapi Gurih</h4>
+      <p>Abon daging sapi premium, cocok untuk bekal & nasi hangat</p>
+      <strong>Rp30.000</strong><br><small>Tersedia</small>
+    </div>
+    <div class="product-item">
+      <img src="kacang.jpg" alt="Kacang Bawang">
+      <h4>Kacang Bawang Renyah</h4>
+      <p>Kacang goreng dengan aroma bawang khas dan gurih</p>
+      <strong>Rp18.000</strong><br><small>Pre-Order</small>
+    </div>
+    <div class="product-item">
+      <img src="serundeng.jpg" alt="Serundeng Kelapa">
+      <h4>Serundeng Kelapa</h4>
+      <p>Kelapa parut sangrai, cocok sebagai lauk pelengkap</p>
+      <strong>Rp10.000</strong><br><small>Tersedia</small>
+    </div>
+  </div>
+</section>
+
 <footer>
   <p>© 2025 UMKM Rasa Lokal. Seluruh hak cipta dilindungi.</p>
 </footer>
+
 </body>
 </html>
