--- a/produk.html
+++ b/produk.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Beranda - UMKM Rasa Lokal</title>
+  <title>Produk - UMKM Rasa Lokal</title>
   <style>
     * {
       box-sizing: border-box;
@@ -20,19 +20,19 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 20px 40px;
+      padding: 30px 50px;
       background-color: white;
       flex-wrap: wrap;
     }
 
     .logo h1 {
       margin: 0;
-      font-size: 2em;
+      font-size: 2.5em;
       color: #009688;
     }
 
     .logo p {
-      font-size: 1em;
+      font-size: 1.1em;
       color: #666;
       margin-top: 4px;
     }
@@ -40,17 +40,18 @@
     .navbar {
       display: flex;
       flex-wrap: wrap;
-      gap: 10px;
-      margin-top: 10px;
+      gap: 15px;
+      margin-top: 15px;
     }
 
     .navbar a {
       text-decoration: none;
       background-color: #009688;
       color: #fff;
-      padding: 10px 18px;
-      border-radius: 6px;
+      padding: 12px 22px;
+      border-radius: 8px;
       font-weight: bold;
+      font-size: 1em;
       transition: background-color 0.3s ease;
     }
 
@@ -74,43 +75,44 @@
     }
 
     section {
-      padding: 20px;
-      margin: 10px auto;
-      max-width: 1111px;
+      padding: 30px;
+      margin: 20px auto;
+      max-width: 1150px;
       background-color: #ffffff;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+      border-radius: 12px;
+      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.08);
     }
 
     h2 {
+      font-size: 2em;
       color: #2c3e50;
-      border-bottom: 2px solid #ddd;
-      padding-bottom: 5px;
+      border-bottom: 3px solid #ddd;
+      padding-bottom: 10px;
     }
 
     .product-list {
       display: flex;
       flex-direction: column;
-      gap: 20px;
-      margin-top: 20px;
+      gap: 25px;
+      margin-top: 25px;
     }
 
     .product-item {
       display: flex;
-      gap: 15px;
+      gap: 20px;
       background-color: #fafafa;
-      border-radius: 10px;
+      border-radius: 12px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-      padding: 15px;
+      padding: 20px;
       align-items: center;
       flex-wrap: wrap;
     }
 
     .product-item img {
-      width: 100px;
+      width: 130px;
       height: auto;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      border-radius: 12px;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.12);
     }
 
     .product-info {
@@ -118,15 +120,31 @@
     }
 
     .product-info h4 {
+      font-size: 1.4em;
       margin: 0 0 5px;
     }
 
+    .product-info p {
+      font-size: 1.1em;
+      margin: 5px 0;
+    }
+
+    .product-info strong {
+      font-size: 1.2em;
+      color: #009688;
+    }
+
+    .product-info small {
+      font-size: 1em;
+      color: #888;
+    }
+
     footer {
-      padding: 20px;
-      margin: 10px auto;
+      padding: 25px;
+      margin: 20px auto 0;
       background-color: #009688;
       text-align: center;
-      font-size: 0.9em;
+      font-size: 1em;
       color: #ffffff;
       border-top: 1px solid #eee;
     }
