--- a/produk.html
+++ b/produk.html
@@ -20,38 +20,38 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 30px 50px;
+      padding: 40px 60px;
       background-color: white;
       flex-wrap: wrap;
     }
 
     .logo h1 {
       margin: 0;
-      font-size: 2.5em;
+      font-size: 3em;
       color: #009688;
     }
 
     .logo p {
-      font-size: 1.1em;
+      font-size: 1.3em;
       color: #666;
-      margin-top: 4px;
+      margin-top: 6px;
     }
 
     .navbar {
       display: flex;
       flex-wrap: wrap;
-      gap: 15px;
-      margin-top: 15px;
+      gap: 20px;
+      margin-top: 20px;
     }
 
     .navbar a {
       text-decoration: none;
       background-color: #009688;
       color: #fff;
-      padding: 12px 22px;
-      border-radius: 8px;
+      padding: 15px 30px;
+      border-radius: 10px;
       font-weight: bold;
-      font-size: 1em;
+      font-size: 1.2em;
       transition: background-color 0.3s ease;
     }
 
@@ -75,46 +75,47 @@
     }
 
     section {
-      padding: 30px;
-      margin: 20px auto;
+      padding: 40px;
+      margin: 30px auto;
       max-width: 1150px;
       background-color: #ffffff;
-      border-radius: 12px;
-      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.08);
-      height: 90vh; /* tinggi container */
-      overflow-y: auto; /* scroll vertikal jika isi lebih */
+      border-radius: 15px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+      height: 90vh;
+      overflow-y: auto;
     }
 
     h2 {
-      font-size: 2em;
+      font-size: 2.8em;
       color: #2c3e50;
-      border-bottom: 3px solid #ddd;
-      padding-bottom: 10px;
+      border-bottom: 4px solid #ddd;
+      padding-bottom: 15px;
+      margin-bottom: 40px;
     }
 
     .product-list {
       display: flex;
       flex-direction: column;
-      gap: 40px;
+      gap: 60px;
       margin-top: 25px;
     }
 
     .product-item {
       display: flex;
-      gap: 30px;
+      gap: 40px;
       background-color: #fafafa;
-      border-radius: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      padding: 40px;
       align-items: center;
       flex-wrap: wrap;
     }
 
     .product-item img {
-      width: 200px;
+      width: 280px;
       height: auto;
-      border-radius: 12px;
-      box-shadow: 0 3px 8px rgba(0,0,0,0.12);
+      border-radius: 15px;
+      box-shadow: 0 5px 12px rgba(0,0,0,0.15);
       flex-shrink: 0;
     }
 
@@ -123,32 +124,33 @@
     }
 
     .product-info h4 {
-      font-size: 1.8em;
-      margin: 0 0 10px;
+      font-size: 2.2em;
+      margin: 0 0 15px;
     }
 
     .product-info p {
-      font-size: 1.3em;
-      margin: 8px 0;
+      font-size: 1.6em;
+      margin: 10px 0 18px;
+      line-height: 1.4;
     }
 
     .product-info strong {
-      font-size: 1.5em;
+      font-size: 1.9em;
       color: #009688;
     }
 
     .product-info small {
-      font-size: 1.2em;
+      font-size: 1.5em;
       color: #888;
-      margin-left: 12px;
+      margin-left: 16px;
     }
 
     footer {
-      padding: 25px;
-      margin: 20px auto 0;
+      padding: 30px;
+      margin: 30px auto 0;
       background-color: #009688;
       text-align: center;
-      font-size: 1em;
+      font-size: 1.1em;
       color: #ffffff;
       border-top: 1px solid #eee;
     }
