--- a/produk.html
+++ b/produk.html
@@ -2,255 +2,316 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>Produk - UMKM Rasa Lokal</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Beranda - UMKM Rasa Lokal</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    body, html {
-      margin: 0;
-      padding: 0;
+    body {
       font-family: 'Segoe UI', sans-serif;
       background-color: #f8f8f8;
       color: #333;
-      scroll-behavior: smooth;
+      margin: 0;
+      padding: 0;
     }
 
     .header-bar {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 40px 60px;
+      padding: 20px 40px;
       background-color: white;
       flex-wrap: wrap;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
 
     .logo h1 {
       margin: 0;
-      font-size: 3.5em;
+      font-size: 2em;
       color: #009688;
     }
 
     .logo p {
-      font-size: 1.4em;
+      font-size: 1em;
       color: #666;
-      margin-top: 6px;
-    }
-
-    .navbar {
-      display: flex;
-      gap: 25px;
-      margin-top: 20px;
+      margin-top: 4px;
     }
 
     .navbar a {
       text-decoration: none;
       background-color: #009688;
       color: #fff;
-      padding: 18px 40px;
-      border-radius: 12px;
+      padding: 10px 18px;
+      margin-left: 10px;
+      border-radius: 6px;
       font-weight: bold;
-      font-size: 1.4em;
       transition: background-color 0.3s ease;
-      white-space: nowrap;
     }
 
     .navbar a:hover {
       background-color: #00796b;
     }
 
-    @media (max-width: 768px) {
-  .header-bar {
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 20px;
-  }
-
-  .logo {
-    margin-bottom: 15px;
-  }
-
-  .navbar {
-    justify-content: flex-start;
-    flex-direction: row; /* tetap horizontal */
-    flex-wrap: nowrap;   /* tidak pindah baris */
-    overflow-x: auto;    /* bisa geser kalau sempit */
-    width: 100%;
-    gap: 10px;
-  }
-
-  .navbar a {
-    font-size: 1.2em;
-    white-space: nowrap; /* biar teksnya nggak turun */
-  }
-
-    footer {
-    font-size: 0.85em;
-    padding: 15px 10px;
-  }
-}
     section {
-      padding: 60px 60px 80px; /* kasih ruang atas bawah supaya header/footer tidak nempel */
-      max-width: 1150px;
-      margin: 0 auto;
+      padding: 20px;
+      margin: 10px auto;
+      max-width: 1111px;
       background-color: #ffffff;
-      border-radius: 15px;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-      scroll-behavior: smooth;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
     }
 
     h2 {
-      font-size: 3em;
       color: #2c3e50;
-      border-bottom: 4px solid #ddd;
-      padding-bottom: 15px;
-      margin-bottom: 40px;
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 5px;
     }
 
+    /* ===== Tabel produk (desktop) ===== */
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    th, td {
+      padding: 15px;
+      border: 1px solid #ddd;
+      vertical-align: top;
+      text-align: center;
+    }
+
+    img {
+      width: 100px;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+
+    /* ===== Daftar produk (mobile) ===== */
     .product-list {
-      display: flex;
-      flex-direction: column;
-      gap: 80px;
-      margin-top: 25px;
+      display: none; /* default disembunyikan di desktop */
     }
 
-    .product-item {
-      display: flex;
-      gap: 60px;
-      background-color: #fafafa;
-      border-radius: 20px;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.12);
-      padding: 50px;
-      align-items: center;
-      flex-wrap: wrap;
-    }
+    /* ===== Responsive untuk layar kecil (max-width:600px) ===== */
+    @media (max-width: 600px) {
 
-    .product-item img {
-      width: 350px;
-      height: auto;
-      border-radius: 20px;
-      box-shadow: 0 7px 18px rgba(0,0,0,0.18);
-      flex-shrink: 0;
-      object-fit: cover;
-    }
+      .header-bar {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 20px;
+      }
 
-    .product-info {
-      flex: 1;
-    }
+      .navbar {
+        margin-top: 15px;
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+      }
 
-    .product-info h4 {
-      font-size: 2.8em;
-      margin: 0 0 20px;
-    }
+      .navbar a {
+        margin-left: 0;
+        padding: 12px 20px;
+        font-size: 1em;
+      }
 
-    .product-info p {
-      font-size: 1.9em;
-      margin: 15px 0 25px;
-      line-height: 1.5;
-      color: #444;
-    }
+      /* Sembunyikan tabel */
+      table {
+        display: none;
+      }
 
-    .product-info strong {
-      font-size: 2.3em;
-      color: #009688;
-    }
+      /* Tampilkan daftar produk */
+      .product-list {
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+        padding: 0 10px;
+      }
 
-    .product-info small {
-      font-size: 1.8em;
-      color: #888;
-      margin-left: 25px;
+      .product-item {
+        background: #fff;
+        padding: 15px;
+        border-radius: 10px;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+        display: flex;
+        gap: 15px;
+        align-items: center;
+      }
+
+      .product-item img {
+        width: 120px;
+        height: auto;
+        border-radius: 10px;
+        flex-shrink: 0;
+      }
+
+      .product-info {
+        flex: 1;
+        text-align: left;
+      }
+
+      .product-info h4 {
+        margin: 0 0 8px 0;
+        font-size: 1.2em;
+        color: #009688;
+      }
+
+      .product-info p {
+        margin: 5px 0;
+        font-size: 1em;
+      }
+
+      .product-info strong {
+        color: #333;
+      }
+
+      footer {
+        padding: 20px;
+        margin: 10px auto;
+        background-color: #009688;
+        text-align: center;
+        font-size: 0.9em;
+        color: #ffffff;
+        border-top: 1px solid #eee;
+      }
     }
 
     footer {
-      padding: 25px 0;
+      padding: 20px;
+      margin: 10px auto;
       background-color: #009688;
       text-align: center;
-      font-size: 1.3em;
+      font-size: 0.9em;
       color: #ffffff;
       border-top: 1px solid #eee;
-      box-shadow: 0 -2px 6px rgba(0,0,0,0.1);
-      margin-top: 50px;
     }
   </style>
 </head>
 <body>
+  <header class="header-bar">
+    <div class="logo">
+      <h1>UMKM Rasa Lokal</h1>
+      <p><em>Oleh-oleh khas Nusantara, langsung dari dapur kami ke rumah Anda.</em></p>
+    </div>
+    <nav class="navbar">
+      <a href="index.html">Beranda</a>
+      <a href="produk.html">Produk</a>
+      <a href="kontak.html">Kontak</a>
+    </nav>
+  </header>
 
-<header class="header-bar">
-  <div class="logo">
-    <h1>UMKM Rasa Lokal</h1>
-    <p><em>Oleh-oleh khas Nusantara, langsung dari dapur kami ke rumah Anda.</em></p>
-  </div>
-  <nav class="navbar">
-    <a href="index.html">Beranda</a>
-    <a href="produk.html">Produk</a>
-    <a href="kontak.html">Kontak</a>
-  </nav>
-</header>
+  <section>
+    <h2>Daftar Produk</h2>
 
-<section>
-  <h2>Daftar Produk</h2>
-  <div class="product-list">
-    <div class="product-item">
-      <img src="keripik.jpg" alt="Keripik Singkong">
-      <div class="product-info">
-        <h4>Keripik Singkong Pedas</h4>
-        <p>Renyah dan gurih dengan bumbu khas Nusantara</p>
-        <strong>Rp15.000</strong><small>Tersedia</small>
+    <!-- Tabel untuk desktop -->
+    <table border="1" cellpadding="10">
+      <tr>
+        <th>Gambar</th>
+        <th>Nama Produk</th>
+        <th>Deskripsi</th>
+        <th>Harga</th>
+        <th>Ketersediaan</th>
+      </tr>
+      <tr>
+        <td><center><img src="keripik.jpg" alt="Keripik Singkong"></center></td>
+        <td>Keripik Singkong Pedas</td>
+        <td>Renyah dan gurih dengan bumbu khas Nusantara</td>
+        <td>Rp15.000</td>
+        <td>Tersedia</td>
+      </tr>
+      <tr>
+        <td><center><img src="dodol.jpg" alt="Dodol Mangga"></center></td>
+        <td>Dodol Mangga Asli</td>
+        <td>Manis legit dari buah mangga segar tanpa pengawet</td>
+        <td>Rp20.000</td>
+        <td>Stok Terbatas</td>
+      </tr>
+      <tr>
+        <td><center><img src="kopi.jpg" alt="Kopi Bubuk Robusta"></center></td>
+        <td>Kopi Bubuk Robusta</td>
+        <td>Biji kopi pilihan dari pegunungan, ditumbuk manual</td>
+        <td>Rp25.000</td>
+        <td>Tersedia</td>
+      </tr>
+      <tr>
+        <td><center><img src="abon.jpg" alt="Abon Sapi Gurih"></center></td>
+        <td>Abon Sapi Gurih</td>
+        <td>Abon daging sapi premium, cocok untuk bekal & nasi hangat</td>
+        <td>Rp30.000</td>
+        <td>Tersedia</td>
+      </tr>
+      <tr>
+        <td><center><img src="kacang.jpg" alt="Kacang Bawang Renyah"></center></td>
+        <td>Kacang Bawang Renyah</td>
+        <td>Kacang goreng dengan aroma bawang khas dan gurih</td>
+        <td>Rp18.000</td>
+        <td>Pre-Order</td>
+      </tr>
+      <tr>
+        <td><center><img src="serundeng.jpg" alt="Serundeng Kelapa"></center></td>
+        <td>Serundeng Kelapa</td>
+        <td>Kelapa parut sangrai, cocok sebagai lauk pelengkap</td>
+        <td>Rp10.000</td>
+        <td>Tersedia</td>
+      </tr>
+    </table>
+
+    <!-- Daftar produk untuk mobile -->
+    <div class="product-list">
+      <div class="product-item">
+        <img src="keripik.jpg" alt="Keripik Singkong Pedas" />
+        <div class="product-info">
+          <h4>Keripik Singkong Pedas</h4>
+          <p>Renyah dan gurih dengan bumbu khas Nusantara</p>
+          <strong>Rp15.000</strong>
+          <p><em>Tersedia</em></p>
+        </div>
+      </div>
+      <div class="product-item">
+        <img src="dodol.jpg" alt="Dodol Mangga Asli" />
+        <div class="product-info">
+          <h4>Dodol Mangga Asli</h4>
+          <p>Manis legit dari buah mangga segar tanpa pengawet</p>
+          <strong>Rp20.000</strong>
+          <p><em>Stok Terbatas</em></p>
+        </div>
+      </div>
+      <div class="product-item">
+        <img src="kopi.jpg" alt="Kopi Bubuk Robusta" />
+        <div class="product-info">
+          <h4>Kopi Bubuk Robusta</h4>
+          <p>Biji kopi pilihan dari pegunungan, ditumbuk manual</p>
+          <strong>Rp25.000</strong>
+          <p><em>Tersedia</em></p>
+        </div>
+      </div>
+      <div class="product-item">
+        <img src="abon.jpg" alt="Abon Sapi Gurih" />
+        <div class="product-info">
+          <h4>Abon Sapi Gurih</h4>
+          <p>Abon daging sapi premium, cocok untuk bekal & nasi hangat</p>
+          <strong>Rp30.000</strong>
+          <p><em>Tersedia</em></p>
+        </div>
+      </div>
+      <div class="product-item">
+        <img src="kacang.jpg" alt="Kacang Bawang Renyah" />
+        <div class="product-info">
+          <h4>Kacang Bawang Renyah</h4>
+          <p>Kacang goreng dengan aroma bawang khas dan gurih</p>
+          <strong>Rp18.000</strong>
+          <p><em>Pre-Order</em></p>
+        </div>
+      </div>
+      <div class="product-item">
+        <img src="serundeng.jpg" alt="Serundeng Kelapa" />
+        <div class="product-info">
+          <h4>Serundeng Kelapa</h4>
+          <p>Kelapa parut sangrai, cocok sebagai lauk pelengkap</p>
+          <strong>Rp10.000</strong>
+          <p><em>Tersedia</em></p>
+        </div>
       </div>
     </div>
+  </section>
 
-    <div class="product-item">
-      <img src="dodol.jpg" alt="Dodol Mangga">
-      <div class="product-info">
-        <h4>Dodol Mangga Asli</h4>
-        <p>Manis legit dari buah mangga segar tanpa pengawet</p>
-        <strong>Rp20.000</strong><small>Stok Terbatas</small>
-      </div>
-    </div>
-
-    <div class="product-item">
-      <img src="kopi.jpg" alt="Kopi Robusta">
-      <div class="product-info">
-        <h4>Kopi Bubuk Robusta</h4>
-        <p>Biji kopi pilihan dari pegunungan, ditumbuk manual</p>
-        <strong>Rp25.000</strong><small>Tersedia</small>
-      </div>
-    </div>
-
-    <div class="product-item">
-      <img src="abon.jpg" alt="Abon Sapi">
-      <div class="product-info">
-        <h4>Abon Sapi Gurih</h4>
-        <p>Abon daging sapi premium, cocok untuk bekal & nasi hangat</p>
-        <strong>Rp30.000</strong><small>Tersedia</small>
-      </div>
-    </div>
-
-    <div class="product-item">
-      <img src="kacang.jpg" alt="Kacang Bawang">
-      <div class="product-info">
-        <h4>Kacang Bawang Renyah</h4>
-        <p>Kacang goreng dengan aroma bawang khas dan gurih</p>
-        <strong>Rp18.000</strong><small>Pre-Order</small>
-      </div>
-    </div>
-
-    <div class="product-item">
-      <img src="serundeng.jpg" alt="Serundeng Kelapa">
-      <div class="product-info">
-        <h4>Serundeng Kelapa</h4>
-        <p>Kelapa parut sangrai, cocok sebagai lauk pelengkap</p>
-        <strong>Rp10.000</strong><small>Tersedia</small>
-      </div>
-    </div>
-  </div>
-</section>
-
-<footer>
-  <p>© 2025 UMKM Rasa Lokal. Seluruh hak cipta dilindungi.</p>
-</footer>
-
+  <footer>
+    <p>© 2025 UMKM Rasa Lokal. Seluruh hak cipta dilindungi.</p>
+  </footer>
 </body>
 </html>
