--- a/index.html
+++ b/index.html
@@ -21,20 +21,21 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 30px 40px;
+  padding: 20px 40px;
   background-color: white;
   flex-wrap: wrap;
 }
 
 .logo h1 {
-  font-size: 2.5em;
+  margin: 0;
+  font-size: 2em;
   color: #009688;
 }
 
 .logo p {
-  font-size: 1.1em;
+  font-size: 1em;
   color: #666;
-  margin-top: 5px;
+  margin-top: 4px;
 }
 
 .navbar {
@@ -48,8 +49,8 @@
   text-decoration: none;
   background-color: #009688;
   color: #fff;
-  padding: 10px 20px;
-  font-size: 1.1em;
+  padding: 10px 18px;
+  margin-left: 10px;
   border-radius: 6px;
   font-weight: bold;
   transition: background-color 0.3s ease;
